syntax = "proto3";

package ai.metathings.service.evaluatord;
option go_package = "github.com/nayotta/metathings/proto/evaluatord";

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "github.com/nayotta/metathings/proto/constant/state/task.proto";
import "github.com/nayotta/metathings/proto/deviced/model.proto";

message Resource {
	string id = 1;
	string type = 8;
}

message OpResource {
	google.protobuf.StringValue id = 1;
	google.protobuf.StringValue type = 8;
}

message Evaluator {
	string id = 1;
	string alias = 24;
	string description = 25;
	repeated Resource sources = 8;
	Operator operator = 10;
	google.protobuf.Struct config = 11;
}

message OpEvaluator {
	google.protobuf.StringValue id = 1;
	google.protobuf.StringValue alias = 24;
	google.protobuf.StringValue description = 25;
	repeated OpResource sources = 8;
	OpOperator operator = 10;
	google.protobuf.Struct config = 11;
}

message Operator {
	string id = 1;
	string alias = 24;
	string description = 25;
	string driver = 8;
	oneof descriptor {
		LuaDescriptor lua = 32;
	}
}

message OpOperator {
	google.protobuf.StringValue id = 1;
	google.protobuf.StringValue alias = 24;
	google.protobuf.StringValue description = 25;
	google.protobuf.StringValue driver = 8;
	oneof descriptor {
		OpLuaDescriptor lua = 32;
	}
}

message LuaDescriptor {
	string code = 8;
}

message OpLuaDescriptor {
	google.protobuf.StringValue code = 8;
}

message OpTaskState {
	google.protobuf.Timestamp at = 1;
	ai.metathings.constant.state.TaskState state = 2;
	google.protobuf.Struct tags = 8;
}

message TaskState {
	google.protobuf.Timestamp at = 1;
	ai.metathings.constant.state.TaskState state = 2;
	google.protobuf.Struct tags = 8;
}

message OpTask {
	google.protobuf.StringValue id = 1;
	google.protobuf.Timestamp created_at = 2;
	google.protobuf.Timestamp updated_at = 3;
	OpTaskState current_state = 4;
	OpResource source = 8;
}

message Task {
	string id = 1;
	google.protobuf.Timestamp created_at = 2;
	google.protobuf.Timestamp updated_at = 3;
	TaskState current_state = 4;
	Resource source = 8;
	repeated TaskState states = 9;
}

message OpTimer {
	google.protobuf.StringValue id = 1;
	google.protobuf.StringValue alias = 24;
	google.protobuf.StringValue description = 25;
	google.protobuf.StringValue schedule = 8;
	google.protobuf.StringValue timezone = 9;
	google.protobuf.BoolValue enabled = 10;
	repeated ai.metathings.service.deviced.OpConfig configs = 11;
}

message Timer {
	string id = 1;
	string alias = 24;
	string description = 25;
	string schedule = 8;
	string timezone = 9;
	bool enabled = 10;
	repeated ai.metathings.service.deviced.Config configs = 11;
}
